src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__const_variables_default_value_compile_time_evaluation.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 3769
expression: ir
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@false_bool = unnamed_addr constant i8 0
@zero_int = unnamed_addr constant i16 0
@zero_real = unnamed_addr constant double 0.000000e+00
@empty_string = unnamed_addr constant [81 x i8] zeroinitializer
@null_ptr = unnamed_addr constant ptr null
@zero_enum = unnamed_addr constant i32 0
@myEnum.a = unnamed_addr constant i32 0
@myEnum.b = unnamed_addr constant i32 1
@myEnum.c = unnamed_addr constant i32 2
