src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__const_variables_with_range_statement_one.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 2171
expression: src
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%Point = type { i16, i16 }

@b = unnamed_addr constant [2 x %Point] [%Point { i16 10, i16 0 }, %Point zeroinitializer]
@__Point__init = unnamed_addr constant %Point zeroinitializer
@a = unnamed_addr constant [2 x %Point] [%Point { i16 10, i16 20 }, %Point zeroinitializer]
