src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__default_values_are_transitive_for_range_types.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 3881
expression: src
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@a = global i16 7
@b = global i16 7
@aa = unnamed_addr constant i16 7
@bb = unnamed_addr constant i16 7
@cc = unnamed_addr constant i16 14
