src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__fn_test_const_array_elements_in_structs.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 4378
expression: ir
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%DEVICE = type { [21 x i8], [2 x %SENSOR_DATA], [2 x [3 x i16]] }
%SENSOR_DATA = type { i16, [4 x i16], [2 x %INNER_POINT] }
%INNER_POINT = type { i16, i16 }

@devices = unnamed_addr constant [2 x %DEVICE] [%DEVICE { [21 x i8] c"DevA\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00", [2 x %SENSOR_DATA] [%SENSOR_DATA { i16 1, [4 x i16] [i16 10, i16 20, i16 30, i16 40], [2 x %INNER_POINT] [%INNER_POINT { i16 10, i16 5 }, %INNER_POINT { i16 20, i16 -5 }] }, %SENSOR_DATA { i16 2, [4 x i16] [i16 100, i16 200, i16 300, i16 400], [2 x %INNER_POINT] [%INNER_POINT { i16 30, i16 10 }, %INNER_POINT { i16 40, i16 -10 }] }], [2 x [3 x i16]] [[3 x i16] [i16 1, i16 2, i16 3], [3 x i16] [i16 4, i16 5, i16 6]] }, %DEVICE { [21 x i8] c"DevB\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00", [2 x %SENSOR_DATA] [%SENSOR_DATA { i16 3, [4 x i16] [i16 11, i16 22, i16 33, i16 44], [2 x %INNER_POINT] [%INNER_POINT { i16 50, i16 0 }, %INNER_POINT { i16 60, i16 1 }] }, %SENSOR_DATA { i16 4, [4 x i16] [i16 111, i16 222, i16 333, i16 444], [2 x %INNER_POINT] [%INNER_POINT { i16 70, i16 -1 }, %INNER_POINT { i16 80, i16 2 }] }], [2 x [3 x i16]] [[3 x i16] [i16 9, i16 8, i16 7], [3 x i16] [i16 6, i16 5, i16 4]] }]
@__DEVICE__init = unnamed_addr constant %DEVICE zeroinitializer
@__SENSOR_DATA__init = unnamed_addr constant %SENSOR_DATA zeroinitializer
@__INNER_POINT__init = unnamed_addr constant %INNER_POINT zeroinitializer
