src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__standard_function_ir_generation.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 3919
expression: ir
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@a = unnamed_addr constant i16 6
@b = unnamed_addr constant [6 x i16] [i16 4, i16 4, i16 4, i16 4, i16 4, i16 0]
