src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__type_promotion_and_limits.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 3973
expression: ir
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@a = unnamed_addr constant float 6.500000e+00
@b = unnamed_addr constant float 2.500000e+00
@c = unnamed_addr constant float 3.500000e+00
@d = unnamed_addr constant i16 0
@e = unnamed_addr constant i16 10
